deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: agentic-scale-501
spec:
  to:
    kind: Service
    name: agentic-scale-501
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
